# jina-sdk

./: Cargo.toml
src/: embeddings.rs  error.rs  lib.rs  reader.rs  rerank.rs
