[package]
name = "jina-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
url = "2.5.2"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
