[package]
name = "jina-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
http-client = { git = "https://github.com/fdionisi/http-client", rev = "033ac96ab12ac3d13b78f9725b237380917c7094" }
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.0", features = ["full"] }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", rev = "033ac96ab12ac3d13b78f9725b237380917c7094" }
